// Copyright 2017 The ObjectHash-Proto Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This is used for tests that ensure that the objecthash of well-known types is
// correctly calculated.

syntax = "proto3";

package schema.proto3;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message KnownTypes {
  google.protobuf.Any any_field = 1;
  google.protobuf.BoolValue bool_value_field = 2;
  google.protobuf.BytesValue bytes_value_field = 3;
  google.protobuf.DoubleValue double_value_field = 4;
  google.protobuf.Duration duration_field = 5;
  google.protobuf.FloatValue float_value_field = 6;
  google.protobuf.Int32Value int32_value_field = 7;
  google.protobuf.Int64Value int64_value_field = 8;
  google.protobuf.ListValue list_value_field = 9;
  google.protobuf.StringValue string_value_field = 10;
  google.protobuf.Struct struct_field = 11;
  google.protobuf.Timestamp timestamp_field = 12;
  google.protobuf.UInt32Value uint32_value_field = 13;
  google.protobuf.UInt64Value uint64_value_field = 14;
  google.protobuf.Value value_field = 15;
}
